# datalake-web-api

./: Cargo.toml  Dockerfile  README.md  api_schema.yml
src/: app_state.rs  error.rs  lib.rs  main.rs
src/data_store/: aws.rs  error.rs
src/routes/: download.rs  mod.rs  select.rs
src/utils/: aws.rs  constants.rs  datafusion.rs  mod.rs  utils.rs
